tiny changes from code review